# umgebung-vcvrack

./: .gitignore  NOTES.md  README.md  TODO.md
UmgebungExampleSketch/: .clang-format  CMakeLists.txt  UmgebungAdapter.cpp  UmgebungAdapter.h  UmgebungExampleSketch.cpp  make-sketch-library.sh
UmgebungPlugin/: Makefile  plugin.json
UmgebungPlugin/dep/: libUmgebungApp.dylib  libUmgebungSketch.dylib
UmgebungPlugin/src/: UmgebungModule.cpp  plugin.cpp  plugin.hpp
